# position-ocr

./: Cargo.toml  build.rs  icon.rc
src/lib/: mod.rs
src/ui/: mod.rs  ui.fl
src/utils/: mod.rs
