[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
fltk = {version = "1.4.22",features = ["fltk-bundled"]}
rusty-tesseract = "1.1.9"
serde = {version = "1.0.195",features = ["derive"]}
serde_json = "1.0.111"

[build-dependencies]
fl2rust = "0.5.19"



[lib]
path = "./src/lib/mod.rs"
