[package]
name = "ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = "0.26.2"
egui_extras = "0.26.2"
env_logger = "0.11.2"
fltk = {version = "1.4.22",features = ["fltk-bundled"]}
fltk-table = "0.3.1"
rfd = "0.13.0"
# rusty-tesseract = "1.1.9"
serde = {version = "1.0.195",features = ["derive"]}
serde_json = "1.0.111"
tesseract = {version = "0.15.1",features = ["tesseract_5_2"]}
catppuccin-egui = "4.0"
chrono = "0.4.34"
# [build]
# rustc-link-search = ["C/Users/Administrator/Desktop/code/vcpkg/installed/x64-windows/lib"]


[build-dependencies]
fl2rust = "0.5.19"
winres = "0.1.12"
embed-resource = "2.4.1"


[lib]
path = "./src/lib/mod.rs"

[profile.release]
opt-level = 3
